<resources>
    <string name="app_name">水牌</string>
    <string name="app_title">不用等B端</string>
    <string name="app_web">www.buyongdeng.com</string>
    <string name="app_all_rights">All Rights Reserved 2015-2017</string>
    <!-- 设备处理-->
    <string name="device_init">系统初始化...</string>
    <string name="device_bind">设备绑定</string>
    <string name="hint_offline_ip">离线服务器IP</string>
    <string name="offline_device_server">离线服务器</string>
    <string name="hint_offline_password">离线服务端口</string>
    <string name="next">下一步</string>
    <string name="login_title">觅趣意境</string>
    <string name="user_name">用户名</string>
    <string name="user_pass">密码</string>
    <string name="last">上一步</string>
    <string name="login">登 录</string>
    <string name="login_failed">登录失败</string>

    <!--首界面处理-->
    <string name="text_home">首页</string>
    <string name="text_ask_menu">点菜</string>
    <string name="text_oder">订单</string>
    <string name="text_server">服务</string>

    <!--权限相关-->
    <string name="read_phone_state_denied">系统拒绝读取手机状态和身份权限</string>

    <string name="get_data_failed">获取数据失败</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
